# finereader-corrector

./: pyproject.toml
app/: initializing.py  main.py  mappings.py
app/cursor/: __init__.py  cursor.py  moves.py  text_position.py
app/handlers/: abbreviation_handler.py  begin_italic_handler.py  code_handler.py  dash_handler.py  end_italic_handler.py  end_quotation_mark_handler.py  handler.py  internal_italic_handler.py  middle_italic_handler.py  paragraph_handler.py  quotation_mark_handlers.py
app/keyboard_mapping/: __init__.py  keyboard_mapping.py
finereader_corrector/: main.py
finereader_corrector/handlers/: abbreviation_handler.py  handler.py
tests/: test_finereader_corrector.py
