[tool.poetry]
name = "finereader-corrector"
version = "0.1.0"
description = ""
authors = ["Wojciech Oczkowski <wojciech.oczkowski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
